# pg_selective

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md
src/: dump.rs  main.rs  options.rs  selective.rs  sql_string.rs  utils.rs
