[package]
name = "pg_selective"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.2", features = ["derive"] }
postgres = { version = "0.19.5", features = ["array-impls"] }
rustls = "0.21.1"
serde = { version = "1.0.163", features = ["derive"] }
tokio-postgres-rustls = "0.10.0"
